--- a/ActiveCitizenWeb.DataAccess/ActiveCitizenWeb.DataAccess.csproj
+++ b/ActiveCitizenWeb.DataAccess/ActiveCitizenWeb.DataAccess.csproj
@@ -52,6 +52,11 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Context\FaqContext.cs" />
+    <Compile Include="Migrations\201604191658142_InitialCreate.cs" />
+    <Compile Include="Migrations\201604191658142_InitialCreate.Designer.cs">
+      <DependentUpon>201604191658142_InitialCreate.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Provider\StaticContentProvider.cs" />
   </ItemGroup>
@@ -69,6 +74,11 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="DEFAULT DATABASE\0001.sql" />
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Migrations\201604191658142_InitialCreate.resx">
+      <DependentUpon>201604191658142_InitialCreate.cs</DependentUpon>
+    </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
