--- a/ActiveCitizenWeb.StaticContentCMS/ActiveCitizenWeb.StaticContentCMS.csproj
+++ b/ActiveCitizenWeb.StaticContentCMS/ActiveCitizenWeb.StaticContentCMS.csproj
@@ -225,7 +225,6 @@
   <ItemGroup>
     <Compile Include="App_Start\BundleConfig.cs" />
     <Compile Include="App_Start\FilterConfig.cs" />
-    <Compile Include="App_Start\IdentityConfig.cs" />
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="App_Start\Startup.Auth.cs" />
     <Compile Include="App_Start\Startup.Config.cs" />
@@ -239,7 +238,6 @@
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
     <Compile Include="Models\AccountViewModels.cs" />
-    <Compile Include="Models\IdentityModels.cs" />
     <Compile Include="Models\ManageViewModels.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Services\CMSInitializer.cs" />
@@ -325,6 +323,10 @@
     <Content Include="Scripts\jquery-1.10.2.min.map" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\ActiveCitizen.LDAP\ActiveCitizen.LDAP.csproj">
+      <Project>{54e23b88-a681-4d2e-b168-1c0b3bad9499}</Project>
+      <Name>ActiveCitizen.LDAP</Name>
+    </ProjectReference>
     <ProjectReference Include="..\ActiveCitizen.Model\ActiveCitizen.Model.csproj">
       <Project>{43c56219-1224-45dd-8cc1-2bba0b7e85d7}</Project>
       <Name>ActiveCitizen.Model</Name>
