Unit tests draft. Two approaches are presented: using Moq library and using designated Mock class for DbContext.

--- a/ActiveCitizenWeb.DataAccess/ActiveCitizenWeb.DataAccess.csproj
+++ b/ActiveCitizenWeb.DataAccess/ActiveCitizenWeb.DataAccess.csproj
@@ -52,6 +52,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Context\FaqContext.cs" />
+    <Compile Include="Context\IFaqContext.cs" />
     <Compile Include="Migrations\201604191658142_InitialCreate.cs" />
     <Compile Include="Migrations\201604191658142_InitialCreate.Designer.cs">
       <DependentUpon>201604191658142_InitialCreate.cs</DependentUpon>
