Sample test for MVC controller added.

--- a/ActiveCitizenWeb.DataAccess/ActiveCitizenWeb.DataAccess.csproj
+++ b/ActiveCitizenWeb.DataAccess/ActiveCitizenWeb.DataAccess.csproj
@@ -59,6 +59,7 @@
     </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Provider\IStaticContentProvider.cs" />
     <Compile Include="Provider\StaticContentProvider.cs" />
   </ItemGroup>
   <ItemGroup>
