--- a/ActiveCitizenWeb.Tests/ActiveCitizenWeb.Tests.csproj
+++ b/ActiveCitizenWeb.Tests/ActiveCitizenWeb.Tests.csproj
@@ -33,6 +33,10 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="AutoMapper, Version=4.2.1.0, Culture=neutral, PublicKeyToken=be96cd2c38ef1005, processorArchitecture=MSIL">
+      <HintPath>..\packages\AutoMapper.4.2.1\lib\net45\AutoMapper.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="Microsoft.VisualStudio.QualityTools.UnitTestFramework, Version=10.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL" />
@@ -89,6 +93,7 @@
   <ItemGroup>
     <Compile Include="ContentProviders\FaqDbContextMock.cs" />
     <Compile Include="ContentProviders\StaticContentProviderTests.cs" />
+    <Compile Include="Controllers\FaqControllerTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Controllers\HomeControllerTest.cs" />
   </ItemGroup>
@@ -106,6 +111,10 @@
     <ProjectReference Include="..\ActiveCitizenWeb.DataAccess\ActiveCitizenWeb.DataAccess.csproj">
       <Project>{94DAC6B3-D38A-466E-A13D-5D4C62374C0A}</Project>
       <Name>ActiveCitizenWeb.DataAccess</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\ActiveCitizenWeb.StaticContentCMS\ActiveCitizenWeb.StaticContentCMS.csproj">
+      <Project>{7E704DB8-B906-49D5-BA54-4FD26FC49C71}</Project>
+      <Name>ActiveCitizenWeb.StaticContentCMS</Name>
     </ProjectReference>
     <ProjectReference Include="..\ActiveCitizenWeb.UI\ActiveCitizenWeb.UI.csproj">
       <Project>{F6133536-141B-4FFE-AB1F-AEF6F159601E}</Project>
