--- a/ActiveCitizen.Model/ActiveCitizen.Model.csproj
+++ b/ActiveCitizen.Model/ActiveCitizen.Model.csproj
@@ -49,8 +49,8 @@
     <Compile Include="Shared\IFeedItem.cs" />
     <Compile Include="Shared\Image.cs" />
     <Compile Include="Shared\Moscow\MoscowDisctrict.cs" />
-    <Compile Include="StaticContent\FAQ\FaqListCategory.cs" />
-    <Compile Include="StaticContent\FAQ\FaqListItem.cs" />
+    <Compile Include="StaticContent\Faq\FaqListCategory.cs" />
+    <Compile Include="StaticContent\Faq\FaqListItem.cs" />
     <Compile Include="StaticContent\Result\AllResults.cs" />
     <Compile Include="StaticContent\Result\BaseSection.cs" />
     <Compile Include="StaticContent\Result\CityResult.cs" />
