--- a/ActiveCitizenWeb.DataAccess/ActiveCitizenWeb.DataAccess.csproj
+++ b/ActiveCitizenWeb.DataAccess/ActiveCitizenWeb.DataAccess.csproj
@@ -51,16 +51,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Context\FaqContext.cs" />
-    <Compile Include="Context\IFaqContext.cs" />
-    <Compile Include="Migrations\201604191658142_InitialCreate.cs" />
-    <Compile Include="Migrations\201604191658142_InitialCreate.Designer.cs">
-      <DependentUpon>201604191658142_InitialCreate.cs</DependentUpon>
-    </Compile>
+    <Compile Include="Context\IStaticContentDbContext.cs" />
+    <Compile Include="Context\StaticContentDbContext.cs" />
+    <Compile Include="Context\IRepository.cs" />
+    <Compile Include="Context\RepositoryBase.cs" />
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Provider\IStaticContentProvider.cs" />
-    <Compile Include="Provider\StaticContentProvider.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config">
@@ -73,11 +69,6 @@
       <Project>{43C56219-1224-45DD-8CC1-2BBA0B7E85D7}</Project>
       <Name>ActiveCitizen.Model</Name>
     </ProjectReference>
-  </ItemGroup>
-  <ItemGroup>
-    <EmbeddedResource Include="Migrations\201604191658142_InitialCreate.resx">
-      <DependentUpon>201604191658142_InitialCreate.cs</DependentUpon>
-    </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
