--- a/ActiveCitizenWeb.StaticContentCMS/Web.config
+++ b/ActiveCitizenWeb.StaticContentCMS/Web.config
@@ -9,7 +9,9 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <connectionStrings>
-    <add name="FaqContext" connectionString="Data Source=localhost\SQLEXPRESS;Initial Catalog=ActiveCitizenWeb.DataAccess.FaqContext;Integrated Security=True" providerName="System.Data.SqlClient" />
+<!--
+    <add name="FaqContext" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\ActiveCitizenWeb.UI.mdf;Initial Catalog=ActiveCitizenWeb.UI;Integrated Security=true" providerName="System.Data.SqlClient" />
+    -->
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
@@ -24,6 +26,8 @@
     <httpModules>
       <add name="ApplicationInsightsWebTracking" type="Microsoft.ApplicationInsights.Web.ApplicationInsightsHttpModule, Microsoft.AI.Web" />
     </httpModules>
+    <customErrors mode="RemoteOnly" redirectMode="ResponseRewrite">
+    </customErrors>
   </system.web>
   <system.webServer>
     <modules>
@@ -96,10 +100,11 @@
     </assemblyBinding>
   </runtime>
   <entityFramework>
-    <defaultConnectionFactory type="System.Data.Entity.Infrastructure.SqlConnectionFactory, EntityFramework" />
-    <providers>
-      <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
-    </providers>
+    <defaultConnectionFactory type="System.Data.Entity.Infrastructure.SqlConnectionFactory, EntityFramework">
+      <parameters>
+        <parameter value="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\ActiveCitizenWeb.UI.mdf;Initial Catalog=ActiveCitizenWeb.UI;Integrated Security=true" />
+      </parameters>
+    </defaultConnectionFactory>
   </entityFramework>
   <system.codedom>
     <compilers>
