ConnectionString restored to its default value

--- a/ActiveCitizenWeb.StaticContentCMS/Web.config
+++ b/ActiveCitizenWeb.StaticContentCMS/Web.config
@@ -9,9 +9,10 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <connectionStrings>
-<!--
-    <add name="FaqContext" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\ActiveCitizenWeb.UI.mdf;Initial Catalog=ActiveCitizenWeb.UI;Integrated Security=true" providerName="System.Data.SqlClient" />
+    <!--
+    <add name="ActiveCitizen" connectionString="Data Source=(local);Initial Catalog=ActiveCitizenWeb;Integrated Security=True;MultipleActiveResultSets=True" providerName="System.Data.SqlClient"/>
     -->
+    <add name="ActiveCitizen" connectionString="Data Source=localhost\SQLEXPRESS;Initial Catalog=ActiveCitizenWeb.DataAccess.FaqContext;Integrated Security=True" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
@@ -100,11 +101,7 @@
     </assemblyBinding>
   </runtime>
   <entityFramework>
-    <defaultConnectionFactory type="System.Data.Entity.Infrastructure.SqlConnectionFactory, EntityFramework">
-      <parameters>
-        <parameter value="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\ActiveCitizenWeb.UI.mdf;Initial Catalog=ActiveCitizenWeb.UI;Integrated Security=true" />
-      </parameters>
-    </defaultConnectionFactory>
+    <defaultConnectionFactory type="System.Data.Entity.Infrastructure.SqlConnectionFactory, EntityFramework" />
   </entityFramework>
   <system.codedom>
     <compilers>
