Creating default admin credentials and roles on startup implemented.

--- a/ActiveCitizenWeb.StaticContentCMS/ActiveCitizenWeb.StaticContentCMS.csproj
+++ b/ActiveCitizenWeb.StaticContentCMS/ActiveCitizenWeb.StaticContentCMS.csproj
@@ -229,6 +229,8 @@
     <Compile Include="App_Start\Startup.Auth.cs" />
     <Compile Include="App_Start\Startup.Config.cs" />
     <Compile Include="App_Start\WebApiConfig.cs" />
+    <Compile Include="Configuration\AppSettings.cs" />
+    <Compile Include="Configuration\IAppSettings.cs" />
     <Compile Include="Configuration\LdapConnectionSettings.cs" />
     <Compile Include="Controllers\AccountController.cs" />
     <Compile Include="Controllers\FaqListController.cs" />
