--- a/ActiveCitizenWeb.StaticContentCMS/Web.config
+++ b/ActiveCitizenWeb.StaticContentCMS/Web.config
@@ -9,16 +9,15 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <connectionStrings>
-    <!--
-    <add name="ActiveCitizen" connectionString="Data Source=(local);Initial Catalog=ActiveCitizenWeb;Integrated Security=True;MultipleActiveResultSets=True" providerName="System.Data.SqlClient"/>
-    -->
     <add name="ActiveCitizen" connectionString="Data Source=localhost\SQLEXPRESS;Initial Catalog=ActiveCitizenWeb.DataAccess.FaqContext;Integrated Security=True" providerName="System.Data.SqlClient" />
+    <add name="ActiveCitizen.Auth" connectionString="Data Source=localhost\SQLEXPRESS;Initial Catalog=ActiveCitizenWeb.Auth;Integrated Security=True" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
     <add key="webpages:Enabled" value="false" />
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
+    <add key="CreateDefaultCredentialsOnStart" value="true" />
   </appSettings>
   <system.web>
     <authentication mode="None" />
