--- a/ActiveCitizenWeb.StaticContentCMS/Web.config
+++ b/ActiveCitizenWeb.StaticContentCMS/Web.config
@@ -7,11 +7,47 @@
   <configSections>
     <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
+    <section name="ldapConnections" type="ActiveCitizenWeb.StaticContentCMS.Configuration.LdapConnectionsConfigurationSection, ActiveCitizenWeb.StaticContentCMS"/>
   </configSections>
   <connectionStrings>
+    <!--
+    <add name="ActiveCitizen" connectionString="Data Source=(local);Initial Catalog=ActiveCitizenWeb;Integrated Security=True;MultipleActiveResultSets=True" providerName="System.Data.SqlClient"/>
+    <add name="ActiveCitizen.Auth" connectionString="Data Source=(local);Initial Catalog=ActiveCitizenWeb.Auth;Integrated Security=True;MultipleActiveResultSets=True" providerName="System.Data.SqlClient"/>
+    -->
     <add name="ActiveCitizen" connectionString="Data Source=localhost\SQLEXPRESS;Initial Catalog=ActiveCitizenWeb.DataAccess.FaqContext;Integrated Security=True" providerName="System.Data.SqlClient" />
     <add name="ActiveCitizen.Auth" connectionString="Data Source=localhost\SQLEXPRESS;Initial Catalog=ActiveCitizenWeb.Auth;Integrated Security=True" providerName="System.Data.SqlClient" />
   </connectionStrings>
+
+  <ldapConnections useConnection="ApacheDirectoryServer">
+
+    <!-- Microsoft Active Directory sample settings -->
+    <!-- userIdAttributeKey must be a unique identifier of a user across the catalog, DN does not suites since it can be too long. MVC UserManager limits external id length to 128 unicode characters. -->
+    <!-- For userNameAttributeKey can also use 'sAMAccountName', 'mail' or a bunch of others suitable attributes as a login name -->
+    <add name="AD"
+      userNameTransformTemplate="{0}"
+      server="AD.company"
+      basePathDN="OU=Users,OU=Company,DC=AD,DC=company"
+      serviceUserDN="CN=User,OU=Users,OU=Company,DC=AD,DC=company"
+      serviceUserPassword="password"
+      userIdAttributeKey="objectGUID"
+      userNameAttributeKey="userPrincipalName" />
+
+    <!-- Apache Directory Server sample settings -->
+    <!-- 10389 is the default Apache Directory Server port -->
+    <!-- 'secret' is the default Apache Directory Server admin password -->
+    <!-- userIdAttributeKey must be a unique identifier of a user across the catalog -->
+    <!-- For userNameAttributeKey can also use 'uid' or a bunch of others suitable attributes as a login name depending on actual catalog schema -->
+    <add name="ApacheDirectoryServer"
+      userNameTransformTemplate="{0}@localhost"
+      server="localhost:10389"
+      basePathDN="ou=system"
+      serviceUserDN="uid=admin,ou=system"
+      serviceUserPassword="secret"
+      userIdAttributeKey="entryUUID"
+      userNameAttributeKey="cn" />
+
+  </ldapConnections>
+
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
     <add key="webpages:Enabled" value="false" />
