--- a/ActiveCitizenWeb.StaticContentCMS/Web.config
+++ b/ActiveCitizenWeb.StaticContentCMS/Web.config
@@ -7,7 +7,7 @@
   <configSections>
     <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
-    <section name="ldapConnections" type="ActiveCitizenWeb.StaticContentCMS.Configuration.LdapConnectionsConfigurationSection, ActiveCitizenWeb.StaticContentCMS"/>
+    <section name="ldapConnections" type="ActiveCitizenWeb.StaticContentCMS.Configuration.LdapConnectionsConfigurationSection, ActiveCitizenWeb.StaticContentCMS" />
   </configSections>
   <connectionStrings>
     <!--
@@ -57,6 +57,7 @@
   </appSettings>
   <system.web>
     <authentication mode="None" />
+    <globalization culture="ru-RU" uiCulture="ru" />
     <compilation debug="true" targetFramework="4.6.1" />
     <httpRuntime targetFramework="4.6.1" />
     <httpModules>
