--- a/ActiveCitizenWeb.Infrastructure/ActiveCitizenWeb.Infrastructure.csproj
+++ b/ActiveCitizenWeb.Infrastructure/ActiveCitizenWeb.Infrastructure.csproj
@@ -31,6 +31,10 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Autofac, Version=3.5.0.0, Culture=neutral, PublicKeyToken=17863af14b0044da, processorArchitecture=MSIL">
+      <HintPath>..\packages\Autofac.3.5.2\lib\net40\Autofac.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089, processorArchitecture=MSIL">
       <HintPath>..\packages\EntityFramework.6.1.3\lib\net45\EntityFramework.dll</HintPath>
       <Private>True</Private>
@@ -86,6 +90,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="AutofacModules\ContentProvidersModule.cs" />
+    <Compile Include="AutofacModules\UserManagementModule.cs" />
     <Compile Include="UserManagement\ApplicationIdentityDbContext.cs" />
     <Compile Include="UserManagement\ApplicationRoleManager.cs" />
     <Compile Include="UserManagement\ApplicationUserManager.cs" />
@@ -113,6 +119,7 @@
     <None Include="App.config" />
     <None Include="packages.config" />
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
