--- a/ActiveCitizenWeb.StaticContentCMS/Web.config
+++ b/ActiveCitizenWeb.StaticContentCMS/Web.config
@@ -11,8 +11,8 @@
   </configSections>
   <connectionStrings>
     <!--
-    <add name="ActiveCitizen" connectionString="Data Source=(local);Initial Catalog=ActiveCitizenWeb;Integrated Security=True;MultipleActiveResultSets=True" providerName="System.Data.SqlClient"/>
-    <add name="ActiveCitizen.Auth" connectionString="Data Source=(local);Initial Catalog=ActiveCitizenWeb.Auth;Integrated Security=True;MultipleActiveResultSets=True" providerName="System.Data.SqlClient"/>
+    <add name="ActiveCitizen" connectionString="Data Source=(local);Initial Catalog=ActiveCitizenWeb;Integrated Security=True;MultipleActiveResultSets=True" providerName="System.Data.SqlClient" />
+    <add name="ActiveCitizen.Auth" connectionString="Data Source=(local);Initial Catalog=ActiveCitizenWeb.Auth;Integrated Security=True;MultipleActiveResultSets=True" providerName="System.Data.SqlClient" />
     -->
     <add name="ActiveCitizen" connectionString="Data Source=localhost\SQLEXPRESS;Initial Catalog=ActiveCitizenWeb.DataAccess.FaqContext;Integrated Security=True" providerName="System.Data.SqlClient" />
     <add name="ActiveCitizen.Auth" connectionString="Data Source=localhost\SQLEXPRESS;Initial Catalog=ActiveCitizenWeb.Auth;Integrated Security=True" providerName="System.Data.SqlClient" />
@@ -23,28 +23,14 @@
     <!-- Microsoft Active Directory sample settings -->
     <!-- userIdAttributeKey must be a unique identifier of a user across the catalog, DN does not suites since it can be too long. MVC UserManager limits external id length to 128 unicode characters. -->
     <!-- For userNameAttributeKey can also use 'sAMAccountName', 'mail' or a bunch of others suitable attributes as a login name -->
-    <add name="AD"
-      userNameTransformTemplate="{0}"
-      server="AD.company"
-      basePathDN="OU=Users,OU=Company,DC=AD,DC=company"
-      serviceUserDN="CN=User,OU=Users,OU=Company,DC=AD,DC=company"
-      serviceUserPassword="password"
-      userIdAttributeKey="objectGUID"
-      userNameAttributeKey="userPrincipalName" />
+    <add name="AD" userNameTransformTemplate="{0}" server="AD.company" basePathDN="OU=Users,OU=Company,DC=AD,DC=company" serviceUserDN="CN=User,OU=Users,OU=Company,DC=AD,DC=company" serviceUserPassword="password" userIdAttributeKey="objectGUID" userNameAttributeKey="userPrincipalName" />
 
     <!-- Apache Directory Server sample settings -->
     <!-- 10389 is the default Apache Directory Server port -->
     <!-- 'secret' is the default Apache Directory Server admin password -->
     <!-- userIdAttributeKey must be a unique identifier of a user across the catalog -->
     <!-- For userNameAttributeKey can also use 'uid' or a bunch of others suitable attributes as a login name depending on actual catalog schema -->
-    <add name="ApacheDirectoryServer"
-      userNameTransformTemplate="{0}@localhost"
-      server="localhost:10389"
-      basePathDN="ou=system"
-      serviceUserDN="uid=admin,ou=system"
-      serviceUserPassword="secret"
-      userIdAttributeKey="entryUUID"
-      userNameAttributeKey="cn" />
+    <add name="ApacheDirectoryServer" userNameTransformTemplate="{0}@localhost" server="localhost:10389" basePathDN="ou=system" serviceUserDN="uid=admin,ou=system" serviceUserPassword="secret" userIdAttributeKey="entryUUID" userNameAttributeKey="cn" />
 
   </ldapConnections>
 
@@ -100,7 +86,7 @@
       </dependentAssembly>
       <dependentAssembly>
         <assemblyIdentity name="Newtonsoft.Json" culture="neutral" publicKeyToken="30ad4fe6b2a6aeed" />
-        <bindingRedirect oldVersion="0.0.0.0-6.0.0.0" newVersion="6.0.0.0" />
+        <bindingRedirect oldVersion="0.0.0.0-8.0.0.0" newVersion="8.0.0.0" />
       </dependentAssembly>
       <dependentAssembly>
         <assemblyIdentity name="System.Web.Optimization" publicKeyToken="31bf3856ad364e35" />
